# peridot-kernel-prebuilts-build-tools

./: BUILD.bazel  build-prebuilts.sh  manifest.xml  prebuilt_tool.bzl  update-bazel.sh  update-prebuilts.sh
bazel/linux-x86_64/: LICENSE  bazel
