load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load(":cc.bzl", "import_libraries")
load(":prebuilt_tool.bzl", "prebuilt_tool")

_SHARED_LIBS = glob(["linux-x86/lib64/*.so"])

filegroup(
    name = "linux-x86",
    srcs = glob(["linux-x86/**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linux-x86-libs",
    srcs = _SHARED_LIBS,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linux_musl-x86-libs",
    srcs = glob(["linux_musl-x86/lib64/*.so"]),
    visibility = ["//visibility:private"],
)

# Used in prebuilt_tool()
alias(
    name = "libs",
    actual = select({
        "//build/kernel/kleaf/platforms/libc:glibc": ":linux-x86-libs",
        "//build/kernel/kleaf/platforms/libc:musl": ":linux_musl-x86-libs",
    }),
    target_compatible_with = select({
        "//build/kernel/kleaf/platforms/libc:glibc": [],
        "//build/kernel/kleaf/platforms/libc:musl": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:private"],
)

import_libraries(
    name = "linux_x86_imported_libs",
    hdrs = glob(["linux-x86/include/**/*.h"]),
    shared_libraries = _SHARED_LIBS,
    strip_include_prefix = "linux-x86/include",
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linux_x86_runpath",
    srcs = ["linux-x86/lib64"],
    visibility = ["//build/kernel/kleaf:__subpackages__"],
)

import_libraries(
    name = "linux_x86_libcrypto",
    hdrs = glob(["linux-x86/include/openssl/*.h"]),
    shared_libraries = ["linux-x86/lib64/libcrypto-host.so"],
    strip_include_prefix = "linux-x86/include",
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

prebuilt_tool(
    name = "avbtool",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "blk_alloc_to_base_fs",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "build_image",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "build_super_image",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "certify_bootimg",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "depmod",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "dtc",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "e2fsck",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "e2fsdroid",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "fec",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "img2simg",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "interceptor",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "interceptor_analysis",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "lpmake",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "mkbootfs",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "mkdtimg",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "mke2fs",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "mkfs.erofs",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "mkuserimg_mke2fs",
    visibility = ["//build/kernel:__subpackages__"],
)

# TODO(b/354773024): build pahole with musl against argp substitution.
alias(
    name = "pahole",
    actual = "linux-x86/bin/pahole",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "simg2img",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "soong_zip",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "stg",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "stgdiff",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "swig",
    data = select({
        "//build/kernel/kleaf/platforms/libc:glibc": glob(["linux-x86/share/swig/**"]),
        "//build/kernel/kleaf/platforms/libc:musl": glob(["linux_musl-x86/share/swig/**"]),
    }),
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "tune2fs",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "ufdt_apply_overlay",
    visibility = ["//build/kernel:__subpackages__"],
)

prebuilt_tool(
    name = "lz4",
    visibility = ["//build/kernel:__subpackages__"],
)

# For //build/kernel:gki_certification_tools
# Don't build this directly, as it will pick the default value for
# //build/kernel/kleaf/platforms/libc
pkg_files(
    name = "gki_certification_tools_pkg_files",
    srcs = select({
        "//build/kernel/kleaf/platforms/libc:glibc": [
            "linux-x86/bin/avbtool",
            "linux-x86/bin/certify_bootimg",
        ],
        "//build/kernel/kleaf/platforms/libc:musl": [
            "linux_musl-x86/bin/avbtool",
            "linux_musl-x86/bin/certify_bootimg",
        ],
    }) + [
        ":libs",
    ],
    strip_prefix = select({
        "//build/kernel/kleaf/platforms/libc:glibc": strip_prefix.from_pkg("linux-x86"),
        "//build/kernel/kleaf/platforms/libc:musl": strip_prefix.from_pkg("linux_musl-x86"),
    }),
    visibility = ["//build/kernel:__subpackages__"],
)
